Tweaking darkness article still

--- a/content/posts/2025-09-30-shedding-light-on-darkness-in-dnd.mdx
+++ b/content/posts/2025-09-30-shedding-light-on-darkness-in-dnd.mdx
@@ -28,7 +28,7 @@ Shadowdark didn't invent these ideas. Starting with a deep appreciation for the 
 
 ## A Practical Toolkit for 5e
 
-You do not need to switch systems. You only need to make light matter. The following tools work together. Pick three and commit to them for a full dungeon, then add more once your table sees the difference.
+You do not need to switch systems to apprciate the thrill of danger lurking just beyond your torchlight. Although I recommend checking out other systems, especially Shadowdark, you only need to make light matter to add more adventure to your 5e games. The following tools work together. Pick three and commit to them for a full dungeon, then add more once your table sees the difference.
 
 ### 1) Enforce the rules that already exist
 
