--- a/content/posts/2025-09-30-shedding-light-on-darkness-in-dnd.mdx
+++ b/content/posts/2025-09-30-shedding-light-on-darkness-in-dnd.mdx
@@ -14,69 +14,49 @@ Contributing to the sense of danger and uncertainty, light was a resource that c
 
 The edge of the torch defined the edge of the world. That circle shrank with every turn.
 
-Modern tables often skip that pressure. 5e hands out darkvision widely and many groups run it as “see normally, in gray.” The rules do not support that shortcut, but most tables can't be bothered with the distinction and they are leaving a key tool of creating in game tension "on the table".  That being said, it's fair to say that the rules-as-written in 5e water down the fear of the dark.This takes that night, which should be dark and full of dangers, and makes it a minor annoyance at best.
+Modern tables often skip that pressure. 5e hands out darkvision widely and many groups run it as "see normally, in gray." The rules do not support that shortcut, but most tables can't be bothered with the distinction and they are leaving a key tool of creating in game tension "on the table".  That being said, it's fair to say that the rules-as-written in 5e water down the fear of the dark.This takes that night, which should be dark and full of dangers, and makes it a minor annoyance at best.
 
-We're losing something important when we treat light as a non-issue. This article offers a toolkit to make light matter again. You can pick and choose from these ten options to fit your table's style. The goal is to make light a resource that shapes exploration, forces choices, and makes the dungeon feel actively hostile when the party's lights go out. OSR and OSR-adjacent games have leaned into this for decades. 5e can too, with a few tweaks and a little bookkeeping. I think a small bit of resource tracking can be a good thing, but it has to mean something. Watching a resource dwindle should raise some level of anxiety and tension, and players should even occasionally have to make hard choices about how to manage it.
+We're losing something important when we treat light as a non-issue. This article offers a toolkit to make light matter again. You can pick and choose from these options to fit your table's style. The goal is to make light a resource that shapes exploration, forces choices, and makes the dungeon feel actively hostile when the party's lights go out. OSR and OSR-adjacent games have leaned into this for decades. 5e can too, with a few tweaks and a little bookkeeping. I think a small bit of resource tracking can be a good thing, but it has to mean something. Watching a resource dwindle should raise some level of anxiety and tension, and players should even occasionally have to make hard choices about how to manage it.
 
 This is key to engaging players, and making them feel like their choices matter and giving them more agency. If they can just ignore the dark, then it becomes a non-issue, and the game loses a lot of its tension and excitement.
 
 ## The Shadowdark Reminder
 
-Shadowdark RPG packages that energy and excitement from the past for modern play. No one starts with darkvision. Light is finite. All light sources last a real world hour. When the party’s lights go out, encounter pressure spikes and the dungeon becomes actively hostile. Many foes see in the dark. That asymmetry flips a lantern into a beacon and makes decisions around light feel meaningful again. If you want a concise look at why this works, start here: [Shadowdark RPG](https://www.thearcanelibrary.com/pages/shadowdark-rpg). For a spicy refresher on vision rules at the table, Angry GM’s piece is worth every minute: [Ask Angry: Seeing in the Dark](https://theangrygm.com/ask-angry-seeing-in-the-dark/).
+Shadowdark RPG packages that energy and excitement from the past for modern play. No one starts with darkvision. Light is finite. All light sources last a real world hour. When the party's lights go out, encounter pressure spikes and the dungeon becomes actively hostile. Many foes see in the dark. That asymmetry flips a lantern into a beacon and makes decisions around light feel meaningful again. If you want a concise look at why this works, start here: [Shadowdark RPG](https://www.thearcanelibrary.com/pages/shadowdark-rpg). For a spicy refresher on vision rules at the table, Angry GM's piece is worth every minute: [Ask Angry: Seeing in the Dark](https://theangrygm.com/ask-angry-seeing-in-the-dark/).
 
 Shadowdark didn't invent these ideas. Starting with a deep appreciation for the kind of exiting adventures created by early D&D, it repackaged them for a new audience. You can use this to spice things up again in your 5e games as well.
 
 ## A Practical Toolkit for 5e
 
-You do not need to switch systems to apprciate the thrill of danger lurking just beyond your torchlight. Although I recommend checking out other systems, especially Shadowdark, you only need to make light matter to add more adventure to your 5e games. The following tools work together. Pick three and commit to them for a full dungeon, then add more once your table sees the difference.
+### Working Within 5e: No House Rules Required
 
-### 1) Enforce the rules that already exist
+These tools work entirely within 5e's existing rules or require only procedural changes at the table. You don't need session zero buy-in or player approval to start using them. They're techniques and practices you can implement today. Pick two or three and commit to them for a full dungeon, then add more once your table sees the difference.
+
+#### 1. Enforce the rules that already exist
 
 * Call out lighting states on the map. Bright, dim, or dark. Say them out loud when players cross a threshold.
 * Apply the consequences. Dim light worsens sight-based Perception. Darkness blinds creatures without help. Creatures attacking a blinded target have advantage, and the blinded creature attacks at disadvantage.
-* Keep darkvision limited. It turns darkness into dim light within its radius, which still imposes those Perception penalties. It does not grant color, depth, or detail suitable for reading, tracking faint stains, or spotting hairline cracks. When players say “I have darkvision so I see fine,” answer with “You see shapes and movement, not ink color or etched glyphs.”
+* Keep darkvision limited. It turns darkness into dim light within its radius, which still imposes those Perception penalties. It does not grant color, depth, or detail suitable for reading, tracking faint stains, or spotting hairline cracks. When players say "I have darkvision so I see fine," answer with "You see shapes and movement, not ink color or etched glyphs."
 
-### 2) Put time back on the table
+#### 2. Put time back on the table
 
 * Choose a simple clock. A torch is one hour or six ten-minute turns. A hooded lantern is six turns per flask of oil.
 * Charge time for meaningful actions. Moving to a new area, mapping, searching carefully, forcing a stuck door, or looting a room consumes a turn. State the new time and remaining light.
 * Tie risk to time. Roll a 1 on a d6 for a wandering check each turn. Mention rising drafts and spoor as the clock runs down to invite informed choices.
 
-### 3) Let the dungeon fight the flame
+#### 3. Let the dungeon fight the flame
 
-* Telegraph risk. “The tunnel breathes with a steady draft. Your torch gutters.” “Soot trails rise to a narrow chimney.”
+* Telegraph risk. "The tunnel breathes with a steady draft. Your torch gutters." "Soot trails rise to a narrow chimney."
 * Aim attacks and hazards at the light. Goblins carry sloshing buckets. Bats swarm toward flame. A trapped door exhales and threatens to snuff exposed torches unless covered.
 * Make payoff concrete. A snuffed torch plunges the party into chaos for a round. Advantage flips, initiative gets messy, and even a few skeletons feel terrifying.
 
-### 4) Design encounters that reward carrying light
+#### 4. Design encounters that reward carrying light
 
 * Color and contrast. Clues that depend on hue, paint, or faint stains cannot be read by darkvision.
 * Fine detail. Runes with hairline breaks, tiny clockwork latches, and pressure plates with micro-gaps require bright light to spot.
 * Darkvision traps. A stalker that is invisible to creatures relying on darkvision forces the party to pick a lane. They can operate by lantern or suffer ambush.
 
-### 5) Rebalance darkvision without feeling punitive
-
-Pick one of these variants and communicate it at session zero.
-
-* **Low-light vision, not darkvision.** Ancestries that list darkvision instead treat dim light as bright. True darkness is still darkness.
-* **Shortened range.** Cut darkvision to 30 feet for most ancestries. Reserve 60 feet for Underdark natives with sunlight sensitivity.
-* **Grayscale with teeth.** Darkvision cannot read ink, distinguish pigments, or judge depth beyond rough shapes. Players will light up when it matters without you saying “no.”
-* **Trade and drawback.** If a player insists on true darkvision, pair it with a meaningful cost such as sunlight sensitivity or disadvantage on Perception checks in bright light.
-
-For a thoughtful critique and alternatives, this essay is a solid springboard: [5e Alternatives to Darkvision](https://diyanddragons.blogspot.com/2019/11/5e-alternatives-to-darkvision.html).
-
-### 6) Diversify senses so the party feels special without free flashlights
-
-Give ancestry features that sidestep darkness in flavorful ways without replacing light.
-
-* Dwarves sense warmth changes through stone and can place fresh air shafts.
-* Elves feel faint magical auras and detect disrupted plant growth.
-* Halflings hear the smallest scrape at camp and gain advantage to wake on stealth approaches.
-* Gnomes smell alchemical traces and can follow subtle metallic tangs.
-
-These boons make different characters shine in the dark while keeping lanterns relevant.
-
-### 7) Stock better light and plan to protect it
+#### 5. Stock better light and plan to protect it
 
 Players will invest if you make the options clear and concrete.
 
@@ -88,14 +68,14 @@ Players will invest if you make the options clear and concrete.
 
 Encourage redundancy. Two lit sources give tactical options when one fails.
 
-### 8) Use maps and space to make darkness do work
+#### 6. Use maps and space to make darkness do work
 
 * Build rooms larger than a single light radius. Players should not know how big a place is on entry.
 * Layer height. A 40-foot ceiling swallows torchlight. Wings and webs live up there.
 * Shape sightlines. T-intersections and offset doors hide movement just outside the glow.
-* Place “sound hooks.” Chain rattles, low breathing, dripping water, sand slithers. The ear becomes the scout.
+* Place "sound hooks." Chain rattles, low breathing, dripping water, sand slithers. The ear becomes the scout.
 
-### 9) Script simple behaviors for dark-native foes
+#### 7. Script simple behaviors for dark-native foes
 
 You do not need complex stat blocks to make darkness lethal.
 
@@ -104,12 +84,38 @@ You do not need complex stat blocks to make darkness lethal.
 * **Circle and jab.** Attack those outside the bright radius, then withdraw out of sight.
 * **Learn the glow.** Shift tactics once the party uses hooded lanterns or bullseyes, targeting the bearer with ready actions.
 
-### 10) Make rulings that keep decisions sharp
+#### 8. Make rulings that keep decisions sharp
 
 * Lighting a fresh torch takes an action and a free hand. Relighting a dropped torch takes two actions and a spark.
 * Covering or uncovering a hooded lantern is an object interaction if the hand is free.
 * Dousing rain and underground rivers impose checks to keep flame. Failure costs a turn and a consumable.
 * Mapping carefully doubles the time cost for an area. Rushing halves it but risks missing secret doors.
+
+### House Rules for Maximum Tension
+
+The tools above work great within RAW 5e and will already add substantial tension to your dungeon delves. But if you want to dial things up even further, the following house rules are optional upgrades that amplify everything in the previous section. These modify core character abilities, so you'll need to discuss them at session zero and get player buy-in. Even implementing just one of these changes the game significantly.
+
+#### 1. Rebalance darkvision without feeling punitive
+
+Pick one of these variants and communicate it at session zero.
+
+* **Low-light vision, not darkvision.** Ancestries that list darkvision instead treat dim light as bright. True darkness is still darkness.
+* **Shortened range.** Cut darkvision to 30 feet for most ancestries. Reserve 60 feet for Underdark natives with sunlight sensitivity.
+* **Grayscale with teeth.** Darkvision cannot read ink, distinguish pigments, or judge depth beyond rough shapes. Players will light up when it matters without you saying "no."
+* **Trade and drawback.** If a player insists on true darkvision, pair it with a meaningful cost such as sunlight sensitivity or disadvantage on Perception checks in bright light.
+
+For a thoughtful critique and alternatives, this essay is a solid springboard: [5e Alternatives to Darkvision](https://diyanddragons.blogspot.com/2019/11/5e-alternatives-to-darkvision.html).
+
+#### 2. Diversify senses so the party feels special without free flashlights
+
+Give ancestry features that sidestep darkness in flavorful ways without replacing light.
+
+* Dwarves sense warmth changes through stone and can place fresh air shafts.
+* Elves feel faint magical auras and detect disrupted plant growth.
+* Halflings hear the smallest scrape at camp and gain advantage to wake on stealth approaches.
+* Gnomes smell alchemical traces and can follow subtle metallic tangs.
+
+These boons make different characters shine in the dark while keeping lanterns relevant.
 
 ## Worked Example: One Hour That Feels Like Adventure
 
@@ -128,15 +134,20 @@ Bookkeeping is the only real barrier. A shared timer fixes that. Track each acti
 
 ## House Rules You Can Drop In Today
 
-Steal this card for your table rules section.
+Steal these cards for your table rules section. Use the first set immediately, add the second after session zero discussion.
+
+### Quick Reference: RAW Procedures
 
 * We use bright, dim, and dark lighting consistently.
-* Darkvision never grants color or fine detail and does not remove Perception penalties from dim light.
 * Torches, lanterns, and Light effects are timed and tracked.
 * Every ten minutes of exploration triggers a 1-in-6 encounter check.
 * Monsters target light first when it makes sense.
-* Some threats are invisible to creatures relying on darkvision.
 * Lighting or relighting costs actions, free hands, and real consumables.
+
+### Quick Reference: House Rules
+
+* Darkvision never grants color or fine detail and does not remove Perception penalties from dim light.
+* Some threats are invisible to creatures relying on darkvision.
 * Low-light vision replaces most racial darkvision unless noted.
 
 State these up front and players will build kits, share light-bearing duties, and plan routes with time in mind.
