chore: still tweaking darkness article.  I need to cut it down.:

--- a/content/posts/2025-09-30-shedding-light-on-darkness-in-dnd.mdx
+++ b/content/posts/2025-09-30-shedding-light-on-darkness-in-dnd.mdx
@@ -12,21 +12,25 @@ Early D&D treated light as an important element of dungeon exploration.  It boun
 
 Contributing to the sense of danger and uncertainty, light was a resource that could be lost or stolen, Players had to be careful about how they used it as it could easily alert monsters to their presence. Light sources were treated like an important resources like rope, rations, and hit points. You tracked it, protected it, and planned around it. Infravision was finicky heat-sense, not a free flashlight, so even stout dwarves needed flame to read a map or notice a tripwire. Low-light vision only worked outside and the rest of the party was literally "left in the dark".
 
-The edge of the torch defined the edge of the world. That circle shrank with every turn.
+*The edge of the torch defined the edge of the world.* The hobby owes much of its tension and excitement to that simple design from the early days.
 
 Modern tables often skip that pressure. 5e hands out darkvision widely and many groups run it as "see normally, in gray." The rules do not support that shortcut, but most tables can't be bothered with the distinction and they are leaving a key tool of creating in game tension "on the table".  That being said, it's fair to say that the rules-as-written in 5e water down the fear of the dark.This takes that night, which should be dark and full of dangers, and makes it a minor annoyance at best.
 
 We're losing something important when we treat light as a non-issue. This article offers a toolkit to make light matter again. You can pick and choose from these options to fit your table's style. The goal is to make light a resource that shapes exploration, forces choices, and makes the dungeon feel actively hostile when the party's lights go out. OSR and OSR-adjacent games have leaned into this for decades. 5e can too, with a few tweaks and a little bookkeeping. I think a small bit of resource tracking can be a good thing, but it has to mean something. Watching a resource dwindle should raise some level of anxiety and tension, and players should even occasionally have to make hard choices about how to manage it.
 
-This is key to engaging players, and making them feel like their choices matter and giving them more agency. If they can just ignore the dark, then it becomes a non-issue, and the game loses a lot of its tension and excitement.
+I should say light rules alone aren't going to make your game exciting. To really make it worthwhile the players need a more thin margin on all their resources, including hit points. This means anything that causes character to lose their precious hit points amp up the tension. That however, is part of a new gritty series I"ll be writing later this year. For now, let's focus on light and darkness.
 
-## The Shadowdark Reminder
+Remember, the key is engaging players,and making them feel like their choices matter. If they can just ignore the dark, then it becomes a non-issue, and the game loses a lot of its tension and excitement.
 
-Shadowdark RPG packages that energy and excitement from the past for modern play. No one starts with darkvision. Light is finite. All light sources last a real world hour. When the party's lights go out, encounter pressure spikes and the dungeon becomes actively hostile. Many foes see in the dark. That asymmetry flips a lantern into a beacon and makes decisions around light feel meaningful again. If you want a concise look at why this works, start here: [Shadowdark RPG](https://www.thearcanelibrary.com/pages/shadowdark-rpg). For a spicy refresher on vision rules at the table, Angry GM's piece is worth every minute: [Ask Angry: Seeing in the Dark](https://theangrygm.com/ask-angry-seeing-in-the-dark/).
+## The Shadowdark Re-emergence
+
+Shadowdark RPG packages that energy and excitement from the original D&D for modern play. No one starts with darkvision. Light is finite. All light sources last a real world hour. When the party's lights go out, encounter pressure spikes and the dungeon becomes actively hostile. Many foes see in the dark. That asymmetry flips a lantern into a beacon and makes decisions around light feel meaningful again. If you want a concise look at why this works, start here: [Shadowdark RPG](https://www.thearcanelibrary.com/pages/shadowdark-rpg). For a spicy refresher on vision rules at the table, Angry GM's piece is worth every minute: [Ask Angry: Seeing in the Dark](https://theangrygm.com/ask-angry-seeing-in-the-dark/).
 
 Shadowdark didn't invent these ideas. Starting with a deep appreciation for the kind of exiting adventures created by early D&D, it repackaged them for a new audience. You can use this to spice things up again in your 5e games as well.
 
 ## A Practical Toolkit for 5e
+
+Here are some options to make light and darkness matter again at your table. The first section works entirely within 5e's existing rules. The second section offers house rules that amplify the effect further. Pick and choose what fits your table's style. Also, by Elminster's Fluffy Beard, talk to your players about changes or rules you're thinking about adopting. When the table feels like this is all part of a shared vision, everyone has more fun.
 
 ### Working Within 5e: No House Rules Required
 
@@ -35,20 +39,20 @@ These tools work entirely within 5e's existing rules or require only procedural 
 #### 1. Enforce the rules that already exist
 
 * Call out lighting states on the map. Bright, dim, or dark. Say them out loud when players cross a threshold.
-* Apply the consequences. Dim light worsens sight-based Perception. Darkness blinds creatures without help. Creatures attacking a blinded target have advantage, and the blinded creature attacks at disadvantage.
-* Keep darkvision limited. It turns darkness into dim light within its radius, which still imposes those Perception penalties. It does not grant color, depth, or detail suitable for reading, tracking faint stains, or spotting hairline cracks. When players say "I have darkvision so I see fine," answer with "You see shapes and movement, not ink color or etched glyphs."
+* Apply the consequences. Dim light worsens sight-based Perception. Darkness blinds creatures without help. Creatures attacking a blinded target have advantage, and the blinded creature attacks at disadvantage. Suddenly, an enemy taking the Hide action
+* Use darkvision as written, don't handwaive it. It turns darkness into dim light within its radius, which still imposes those Perception penalties. It does not grant color, depth, or detail suitable for reading, tracking faint stains, or spotting hairline cracks. When players say "I have darkvision so I see fine," answer with "You are able to see a bit but poorly. Things are time and difficult to make out."
 
 #### 2. Put time back on the table
 
-* Choose a simple clock. A torch is one hour or six ten-minute turns. A hooded lantern is six turns per flask of oil.
-* Charge time for meaningful actions. Moving to a new area, mapping, searching carefully, forcing a stuck door, or looting a room consumes a turn. State the new time and remaining light.
-* Tie risk to time. Roll a 1 on a d6 for a wandering check each turn. Mention rising drafts and spoor as the clock runs down to invite informed choices.
+* Choose a simple clock. A torch or lantern is one hour or six ten-minute turns.
+* Charge time for meaningful actions. Moving to a new area, mapping, searching carefully, forcing a stuck door, or looting a room consumes a turn. State the new time and remaining light. *Turns are a useful tool, use them.*
+* Tie risk to time. Roll for some danger or event every turn or two. 
+* Leans into real-time when convienent.  If the party debates for 10 minutes of real time, then mark off a turn in game. In addition to tension, it keeps things moving along.
 
 #### 3. Let the dungeon fight the flame
 
-* Telegraph risk. "The tunnel breathes with a steady draft. Your torch gutters." "Soot trails rise to a narrow chimney."
-* Aim attacks and hazards at the light. Goblins carry sloshing buckets. Bats swarm toward flame. A trapped door exhales and threatens to snuff exposed torches unless covered.
-* Make payoff concrete. A snuffed torch plunges the party into chaos for a round. Advantage flips, initiative gets messy, and even a few skeletons feel terrifying.
+* Telegraph risk. "The tunnel breathes with a steady draft. Your torch sputters." Add a few environmental risks like mud, wind, or dripping water that could snuff the light. Always have a monster lurking in the dark ready to take advantage.
+* Aim attacks and hazards at the light. Goblins carry sloshing buckets. Bats swarm toward flame. A trapped door exhales and threatens to snuff exposed torches unless covered. The Disarm Action can suddenly become very powerful against a light source.
 
 #### 4. Design encounters that reward carrying light
 
